# kurs6

./: pyproject.toml
mailing/: .env
mailing/blog/: models.py  urls.py  views.py
mailing/blog/migrations/: 0001_initial.py
mailing/blog/templates/blog/: blog_post_detail.html  blog_post_list.html
mailing/config/: settings.py  urls.py
mailing/home/: urls.py  views.py
mailing/home/templates/: home.html
mailing/mailing_service/: forms.py  models.py  scheduler.py  urls.py  views.py
mailing/mailing_service/migrations/: 0001_initial.py  0002_alter_mailinglist_status.py
mailing/mailing_service/templates/: base.html  create_mailing.html  delete_client.html  delete_mailing.html  delete_message.html  edit_client.html  edit_mailing.html  edit_message.html  manage_clients.html  manage_mailings.html  manage_messages.html  no_access.html
mailing/users/: apps.py  forms.py  models.py  urls.py  views.py
mailing/users/migrations/: 0001_initial.py
mailing/users/templates/registration/: base.html  email_code.html  email_confirmation_failed.html  email_confirmation_sent.html  email_verified.html.html  login.html  logout.html  password_reset_form.html  password_reset_mail.html  register.html  user_list.html  user_password_set_new.html
