[tool.poetry]
name = "coursework"
version = "0.1.0"
description = ""

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
django-apscheduler = "^0.6.2"
django-bootstrap4 = "^24.1"
apscheduler = "^3.10.4"
django-bootstrap5 = "^23.4"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"
asgiref = "^3.7.2"
django-allauth = "^0.60.1"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
